--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        test header main
-    </header>
+    <p>test</p>
 </body>
 </html>
